syntax = "proto2";

package apollo.canbus;

import "modules/canbus/proto/chassis.proto";
import "modules/common/configs/proto/vehicle_config.proto";

message VehicleParameter {
  enum VehicleBrand {
    LINCOLN_MKZ = 0;
    GEM = 1;
    CH = 2;
    AGILEX = 4;
    AGRIBOT = 5;
    TSY = 6;
    DKIT = 7;
  }
  
  optional apollo.common.VehicleBrand brand = 1;
  optional double max_engine_pedal = 2;
  optional int32 max_enable_fail_attempt = 3;
  optional Chassis.DrivingMode driving_mode = 4;
  //以下是出现了VehicleParameter has no member named max_steer_angle 的错误二添加尝试的，如果没有删除则修改有效
  //意味着车辆一些参数需要在这里定义
  optional double max_steer_angle = 5;
  optional double max_steer_angle_spd = 6;
  optional double min_steer_angle_spd = 7;
}
